--- a/fristalbubmb.html
+++ b/fristalbubmb.html
@@ -8,6 +8,21 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+  <section>
+    <div class="haft-width">
+        <h1>Welcome to </h1>
+    <h1> <span class="shibluahmed">Shiblu ahmed</span> world</h1>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <h3>Build climber and train stopper</h3>
+    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled
+    </p>
+    <a class="hireme" target="_blank" href="https://www.facebook.com/shiblu.ahmed.5686322">HIRE ME </a>
+    </div>
+    <div class="haft-width">
+        <img src="IMG_0310 (1) (2).jpg" alt="">
+    </div>
+  </section>
 </body>
 </html>
