--- a/fristalbubmb.html
+++ b/fristalbubmb.html
@@ -24,5 +24,23 @@
         <img src="IMG_0310 (1) (2).jpg" alt="">
     </div>
   </section>
+  <section>
+    <div class="haft-width">
+        <img src="IMG_0310 (1) (2).jpg" alt="">
+    </div>
+    <div class="haft-width"> 
+        <h1>
+            Dream Big
+
+        </h1>
+        <h3>Become a Web Developer</h3>
+        <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled
+        </p>
+        <a class="hireme" target="_blank" href="https://www.facebook.com/shiblu.ahmed.5686322">Download resume</a>
+
+        
+    </div>
+  </section>
 </body>
 </html>
