--- a/fristalbubmb.html
+++ b/fristalbubmb.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,40 +8,70 @@
     <title>my frist akbubm</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  <section>
-    <div class="haft-width">
-        <h1>Welcome to </h1>
-    <h1> <span class="shibluahmed">Shiblu ahmed</span> world</h1>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <h3>Build climber and train stopper</h3>
-    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled
-    </p>
-    <a class="hireme" target="_blank" href="https://www.facebook.com/shiblu.ahmed.5686322">HIRE ME </a>
-    </div>
-    <div class="haft-width">
-        <img src="IMG_0310 (1) (2).jpg" alt="">
-    </div>
-  </section>
-  <section>
-    <div class="haft-width">
-        <img src="IMG_0310 (1) (2).jpg" alt="">
-    </div>
-    <div class="haft-width"> 
-        <h1>
-            Dream Big
+    <section class="flexyble">
+        <div class="haft-width">
+            <h1 id="50px">Welcome To </h1>
+            <h1> <span class="shibluahmed">Shiblu ahmed</span> world</h1>
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+            <h3>Build climber and train stopper</h3>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+                scrambled
+            </p>
+            <a class="hireme" target="_blank" href="https://www.facebook.com/shiblu.ahmed.5686322">HIRE ME </a>
+        </div>
+        <div class="haft-width">
+            <img src="IMG_0310 (1) (2).jpg" alt="">
+        </div>
+    </section>
+    <section class="flexyble">
+        <div class="haft-width">
+            <img src="IMG_0310 (1) (2).jpg" alt="">
+        </div>
+        <div class="haft-width">
+            <h1>
+                Dream Big
 
-        </h1>
-        <h3>Become a Web Developer</h3>
-        <p>
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled
-        </p>
-        <a class="hireme" target="_blank" href="https://www.facebook.com/shiblu.ahmed.5686322">Download resume</a>
+            </h1>
+            <h3>Become a Web Developer</h3>
+            <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+                scrambled
+            </p>
+            <a class="hireme" target="_blank" href="https://www.facebook.com/shiblu.ahmed.5686322">Download resume</a>
 
-        
-    </div>
-  </section>
+
+        </div>
+    </section>
+    <section class="experiens ">
+        <h1>Experiens</h1>
+        <div class="flexyble">
+            <div id="bordertomato" class="div-shadow">
+                <h1>
+                    Full Stuck Web Developer
+                </h1>
+                <h3 class="ora-color">
+                    2022 present pro level Developer
+                </h3>
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also 
+                </p>
+            </div>
+            <div id="dorderblue" class="div-shadow">
+                <h1>Baby Web Developer</h1>
+                <h3 class="ora-color"> 2021 - 2023 programing hero learner</h3>
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also 
+                </p>
+                
+            </div>
+        </div>
+    </section>
 </body>
+
 </html>
